# avular_origin_description

./: README.md
.github/: CODEOWNERS
origin_one_description/: CHANGELOG.md  CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
origin_one_description/config/: cmd_vel_controller.yaml
origin_one_description/hooks/: gz_resources.dsv.in  gz_resources.sh.in
origin_one_description/launch/: origin_one_description.launch.py  origin_one_rviz.launch.py
origin_one_description/origin_one_description/: launch_helpers.py
origin_one_description/rviz/: origin_one.rviz
origin_one_description/urdf/: README.md  model.config  model.sdf  origin_one.urdf  origin_one.urdf.xacro  ros_bridge.yaml
origin_one_description/urdf/meshes/: antenna.mtl  body.mtl  wheel.mtl  wheel_big.mtl  wheel_mecanumA.mtl  wheel_mecanumB.mtl
origin_v10_description/: package.xml  setup.cfg  setup.py
origin_v10_description/launch/: robot_visualization_rviz.launch.py
origin_v10_description/urdf/: README.md  model.sdf  origin_v10.urdf
origin_v10_description/urdf/meshes/: antenna.mtl  body.mtl  ouster.mtl  wheel.mtl
