<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origin_one_description</name>
  <version>2.0.0</version>
  <description> Robot description models for the Avular Origin One </description>
  <maintainer email="info@avular.com">Avular Robotics</maintainer>
  <license>Avular Holding B.V.</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright_avular</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <debian_depend condition="$ROS_DISTRO == humble">ros-humble-ament-cmake</debian_depend>
    <debian_depend condition="$ROS_DISTRO == jazzy">ros-jazzy-ament-cmake</debian_depend>

    <debian_depend condition="$ROS_DISTRO == humble">ros-humble-robot-state-publisher</debian_depend>
    <debian_depend condition="$ROS_DISTRO == jazzy">ros-jazzy-robot-state-publisher</debian_depend>
    
    <debian_depend condition="$ROS_DISTRO == humble">ros-humble-launch</debian_depend>
    <debian_depend condition="$ROS_DISTRO == jazzy">ros-jazzy-launch</debian_depend>
    
    <debian_depend condition="$ROS_DISTRO == humble">ros-humble-launch-ros</debian_depend>
    <debian_depend condition="$ROS_DISTRO == jazzy">ros-jazzy-launch-ros</debian_depend>
    
    <debian_depend condition="$ROS_DISTRO == humble">ros-humble-xacro</debian_depend>
    <debian_depend condition="$ROS_DISTRO == jazzy">ros-jazzy-xacro</debian_depend>
  </export>
</package>
