[metadata]
description = Roller Description Package
url = https://avular.com
author = Avular Robotics
author_email = info@avular.com
maintainer = Avular Robotics
maintainer_email = info@avular.com
license = Avular Confidential
classifiers =
  Intended Audience :: Developers
  License :: Avular EULA
  Programming Language :: Python
  Topic :: Software Development

[options]
zip_safe = False
install_requires = 
  launch
  launch_ros